tests/machine/x/go/group_by_multi_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_multi_join.go:16:15: undefined: Nation
../../../tests/machine/x/go/group_by_multi_join.go:19:5: undefined: Nation
../../../tests/machine/x/go/group_by_multi_join.go:23:17: undefined: Supplier
../../../tests/machine/x/go/group_by_multi_join.go:26:5: undefined: Supplier
../../../tests/machine/x/go/group_by_multi_join.go:30:16: undefined: Partsupp
../../../tests/machine/x/go/group_by_multi_join.go:35:5: undefined: Partsupp
../../../tests/machine/x/go/group_by_multi_join.go:40:5: undefined: Partsupp
../../../tests/machine/x/go/group_by_multi_join.go:46:23: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:47:16: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:59:34: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:59:34: too many errors

1: //go:build ignore
